<?xml version="1.0"?>
<package format="2">
  <name>yori</name>
  <version>0.0.1</version>
  <description>The yori package</description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">yorizori</maintainer>

  <!-- License -->
  <license>yorizori</license>
  
  <!-- Dependencies -->
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>move_base</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>roslaunch</depend>

  <!-- Build dependencies -->
  <build_depend>catkin</build_depend>

  <!-- Export dependencies -->
  <export>
    <build_depend>catkin</build_depend>
  </export>
</package>

